View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031125 | Community | OCCT:Mesh | public | 2019-11-04 13:30 | 2020-12-02 17:12 |
Reporter | Knut | Assigned To | bugmaster | ||
Priority | high | Severity | crash | ||
Status | closed | Resolution | fixed | ||
Platform | Windows VC++ 2019 64bit | OS | Windows | ||
Product Version | 7.4.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031125: BRepMesh_IncrementalMesh crash in constructor for empty compound shape | ||||
Description | New bug in 7.4.0: I have some unit tests that uses boolean operations to create an empty shape. (shape is completely clipped out, so the result should be empty) The boolean operation then results in a TCompound with zero shapes. When I try to run this through IncrementalMesh, it crashes on line 111 in BrepMesh_IncrementalMesh.cxx: for (Standard_Integer aFaceIt = 0; aFaceIt < aModel->FacesNb(); ++aFaceIt) because aModel is null. There is missing some error checking or at least null checking in this function. This worked in 7.3.0 | ||||
Steps To Reproduce | compound c incmesh c 1 | ||||
Additional information and documentation updates | Regression vs 7.3.0 | ||||
Tags | No tags attached. | ||||
Test case number | bugs/mesh/bug31125 | ||||
|
Branch CR31125_1 has been created by oan. SHA-1: 79bba87961b423146a22310a03e0be4404ad1719 Detailed log of new commits: Author: oan Date: Mon Nov 4 17:09:09 2019 +0300 0031125: BRepMesh_IncrementalMesh crash in constructor for empty compound shape Added check for cases of empty shapes producing null models |
|
Hello Knut, Thank you for reporting the issue. Draft version of the patch is ready and will be integrated as soon as it pass certification procedure. |
|
Branch CR31125_1 has been updated forcibly by oan. SHA-1: 04616bb4a334902f4701e10e7f9ec3f039c0bb43 |
|
Please review branch CR31125_1. http://jenkins-test-12.nnov.opencascade.com/view/CR31125_1-master-OAN/view/COMPARE/ |
|
Reviewed. |
|
Tested in framework of WEEK-45 Combination - OCCT branch : WEEK-45 master SHA - a1a9b249523438cf9b3d510fb4ff74bd4a5675b6 5f5b1aed1c6e139bbd34314eca77ae7abcd8895c Products branch : WEEK-45 SHA - f88bc93e3637c4c42f3c154c0b0e167d4e297ae6 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16844.70000000007 / 16848.430000000117 [-0.02%] Products Total CPU difference: 10837.970000000065 / 10873.690000000062 [-0.33%] Windows-64-VC14: OCCT Total CPU difference: 18366.671875 / 18319.515625 [+0.26%] Products Total CPU difference: 12848.578125 / 12848.859375 [-0.00%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR31125_1 has been deleted by inv. SHA-1: 04616bb4a334902f4701e10e7f9ec3f039c0bb43 |
occt: master 7756fc59 2019-11-04 14:49:07 Committer: bugmaster Details Diff |
0031125: BRepMesh_IncrementalMesh crash in constructor for empty compound shape Added check for cases of empty shapes producing null models. NoError status is returned as far as empty compounds are generally coorect shapes. |
Affected Issues 0031125 |
|
mod - src/BRepMesh/BRepMesh_IncrementalMesh.cxx | Diff File | ||
add - tests/bugs/mesh/bug31125 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-11-04 13:30 | Knut | New Issue | |
2019-11-04 13:30 | Knut | Assigned To | => oan |
2019-11-04 16:45 | oan | Steps to Reproduce Updated | |
2019-11-04 17:10 | git | Note Added: 0088720 | |
2019-11-04 17:15 | oan | Note Added: 0088721 | |
2019-11-04 17:52 | git | Note Added: 0088722 | |
2019-11-04 17:53 | oan | Status | new => assigned |
2019-11-05 07:54 |
|
Product Version | => 7.4.0 |
2019-11-05 07:54 |
|
Target Version | => 7.5.0 |
2019-11-05 07:54 |
|
Additional Information Updated | |
2019-11-05 07:54 |
|
Priority | normal => high |
2019-11-05 12:59 | oan | Note Added: 0088727 | |
2019-11-05 12:59 | oan | Assigned To | oan => msv |
2019-11-05 12:59 | oan | Status | assigned => resolved |
2019-11-05 16:10 |
|
Note Added: 0088731 | |
2019-11-05 16:10 |
|
Assigned To | msv => bugmaster |
2019-11-05 16:10 |
|
Status | resolved => reviewed |
2019-11-07 10:44 | bugmaster | Note Added: 0088766 | |
2019-11-07 10:44 | bugmaster | Status | reviewed => tested |
2019-11-07 10:57 | bugmaster | Test case number | => bugs/mesh/bug31125 |
2019-11-10 11:18 | bugmaster | Changeset attached | => occt master 7756fc59 |
2019-11-10 11:18 | bugmaster | Status | tested => verified |
2019-11-10 11:18 | bugmaster | Resolution | open => fixed |
2019-11-10 11:41 | git | Note Added: 0088837 | |
2020-12-02 16:40 |
|
Fixed in Version | => 7.5.0 |
2020-12-02 17:12 |
|
Status | verified => closed |