0031125: BRepMesh_IncrementalMesh crash in constructor for empty compound shape Added check for cases of empty shapes producing null models. NoError status is returned as far as empty compounds are generally coorect shapes.